--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,8 +2,8 @@
 /*------ VARIABLES ------*/
 $vh: 1vh;
 /*---COLORS---*/
-//$bg-color: hsl(31, 100, 95);
-$bg-color: rgb(255, 255, 255);
+$bg-color: hsl(31, 100, 95);
+//$bg-color: rgb(255, 255, 255);
 $dark-font-color: hsl(0, 0, 20);
 $light-font-color: hsl(0, 0, 51);
 $alert-color: hsl(0, 79, 63);
@@ -19,7 +19,6 @@ $small-font-size: 0.8rem;
 /*---Breaking points---*/ 
 $mobile: 375px;
 $desktop: 760px;
-
 $max-width: 700px;
 
 /*---STYLES---*/
